--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-konva": "18.2.7",
-    "react-scripts": "3.0.1"
+    "react-scripts": "5.0.1"
   },
   "devDependencies": {
     "typescript": "3.3.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
+    "build": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
